--- a/EE3206_WPF/EE3206_WPF.csproj
+++ b/EE3206_WPF/EE3206_WPF.csproj
@@ -10,6 +10,10 @@
     <None Remove="assets\User.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Gu.Wpf.Adorners" Version="2.1.1" />
+  </ItemGroup>
+
   <!--<ItemGroup>
     <None Remove="assets\image.jpg" />
     <None Remove="assets\logo.png" />
