--- a/EE3206_WPF/EE3206_WPF.csproj
+++ b/EE3206_WPF/EE3206_WPF.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Gu.Wpf.Adorners" Version="2.1.1" />
   </ItemGroup>
 
